--- a/_includes/resource-sections.html
+++ b/_includes/resource-sections.html
@@ -5,7 +5,7 @@
             <article class="article article--post typeset">
                 <b><h2 id={{ section | slugify }}>{{ section }}</h2></b>
 
-                {% if page.title == "Essays & Research" %}
+                {% if page.title == "Artigos e Ensaios" %}
                     {% assign writings = site.writings | where_exp: "writing", "writing.categories contains section" %}
                     {% for writing in writings %}
                         <li>
